@@ -1790,6 +1790,12 @@ namespace libtorrent
 			// the proxy, without requiring CONNECT support
 			s->get<http_stream>().set_no_connect(true);
 		}
+
+		std::pair<int, int> const& out_ports = m_settings.outgoing_ports;
+		asio::error_code ec;
+		if (out_ports.first > 0 && out_ports.second >= out_ports.first)
+			s->bind(tcp::endpoint(address(), m_ses.next_port()), ec);
+		
 		boost::intrusive_ptr<peer_connection> c(new web_peer_connection(
 			m_ses, shared_from_this(), s, a, url, 0));
 			
@@ -2087,6 +2093,10 @@ namespace libtorrent
 
 		bool ret = instantiate_connection(m_ses.m_io_service, m_ses.peer_proxy(), *s);
 		TORRENT_ASSERT(ret);
+		std::pair<int, int> const& out_ports = m_ses.settings().outgoing_ports;
+		asio::error_code ec;
+		if (out_ports.first > 0 && out_ports.second >= out_ports.first)
+			s->bind(tcp::endpoint(address(), m_ses.next_port()), ec);
 
 		boost::intrusive_ptr<peer_connection> c(new bt_peer_connection(
 			m_ses, shared_from_this(), s, a, peerinfo));
